# Tandem

./: .dockerignore  .env  .env.example  .env.local.example  .env.production.example  .eslintrc.json  .git-msg-tmp.txt  .gitignore  .gitlab-ci.yml  .hintrc  .markdownlint.json  DEPLOY-CHECKLIST.md  DEPLOY-LOCAL-VS-CLOUD.md  DEPLOY.md  DESKTOP.md  DOCKER-SETUP.md  Dockerfile  LAUNCH-200-RUNBOOK.md  LAUNCH-200.md  LAUNCH-CHECKLIST.md  LOCAL-SHARE.md  PROGRESS-2026-05-29.md  README.md  RELEASE-COMMIT-PLAN-2.md  RELEASE-COMMIT-PLAN.md  STATUS.md  TEST-REPORT.md  TRY-IT.md  docker-compose.db.yml  docker-compose.prod.yml  docker-compose.tandem.yml  drizzle.config.ts  init.sql  middleware.ts  next.config.js  package-deploy.ps1  package-lock.json  package.json  playwright.config.ts  run-local-production.ps1  (+6 more)
app/: globals.css  layout.tsx  page.tsx
backups/: db-snapshot-2026-05-28T11-45-04-234Z.json  db-snapshot-2026-05-28T11-50-06-218Z.json
components/: PushSubscribeToggle.tsx  animated-hero.tsx  api-hydrator.tsx  app-rail.tsx  app-shell.tsx  brand-logo.tsx  client-error-reporter.tsx  command-palette.tsx  empty-state.tsx  error-boundary.tsx  file-manager.tsx  hermes-health.tsx  hero-carousel.tsx  hub-tabs.tsx  keyboard-shortcuts.tsx  markdown-renderer.tsx  mobile-drawer.tsx  mobile-tab-bar.tsx  mobile-top-bar.tsx  mobile-viewport-fixes.tsx  nav-modules.ts  (+19 more)
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: create-icons.bat  fix-ico.js  generate-ico.js  generate-icons.ps1  make-ico.ps1
src-tauri/src/: main.rs
(+1225 files in other folders)
